--- a/src/index.css
+++ b/src/index.css
@@ -116,7 +116,7 @@ body {
 
 @media screen and (max-width: 768px) {
   .app {
-    padding: 1.5rem;
+    padding: 2rem;
   }
 }
 
